<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawer_menu_custom"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/Profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/welcomeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:text="Hello,"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/manisha"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/helloimg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/hello" />
            </LinearLayout>
            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/helloimg"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/emails"
                android:textColor="@color/black"
                android:textSize="13sp" />


        </LinearLayout>
    </RelativeLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/relative_dashboard"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/ripple_menu"
                android:layout_marginTop="10dp">

<!--
                <ImageView
                    android:id="@+id/home_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_home_24"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    app:tint="@color/white" />
-->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Home"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/red" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative_newticket"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/ripple_menu"
                android:layout_marginTop="10dp">

<!--
                <ImageView
                    android:id="@+id/new_ticket_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_home_24"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    app:tint="@color/white" />
-->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/create_ticket"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/red"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relative_exiting_ticket"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/ripple_menu"
                android:layout_marginTop="10dp">

                <!--
                                <ImageView
                                    android:id="@+id/new_ticket_image"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:src="@drawable/ic_baseline_home_24"
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="15dp"
                                    app:tint="@color/white" />
                -->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/exiting_ticket"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/red"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative_setting"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/ripple_menu"
                android:layout_marginTop="10dp">

<!--
                <ImageView
                    android:id="@+id/machine_info_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_home_24"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    app:tint="@color/white" />
-->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/action_settings"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/red"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_help"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/ripple_menu"
                android:layout_marginTop="10dp">

<!--
                <ImageView
                    android:id="@+id/discription_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_home_24"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    app:tint="@color/white" />
-->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/help"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/red"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_logout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/ripple_menu"
                android:layout_marginTop="10dp">

<!--
                <ImageView
                    android:id="@+id/logout_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/logout"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    app:tint="@color/white" />
-->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Logout"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/red"/>

            </RelativeLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>
