<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/loginLayout"
    tools:context=".Activity.LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splashscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:src="@drawable/line"
            app:tint="@color/white" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:src="@drawable/line"
            app:tint="@color/white" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Employee ID*"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/getUserEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:hint="@string/emails"
            android:alpha="0.8"
            android:textColor="@color/white"
            android:background="@drawable/edit_field_custom"
            android:textColorHint="#EACBCB"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Password"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/getUserPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_field_custom"
            android:textColorHint="#EACBCB"
            android:textColor="@color/white"
            android:hint="@string/pass"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:textAlignment="textEnd"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

        </LinearLayout>

<!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#B71E23"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/logintxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>
-->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:id="@+id/logintxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

<!--
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/right_arrow"
                        app:tint="@color/red">

                    </ImageView>
                </LinearLayout>
-->
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>


